Add Dijkstra algorithm and update Main.java