@@ -9,15 +9,16 @@ public class Main {
 
         graph.printGraph(false);
 
-        //Node start = graph.getNodes().getFirst();
+        Node start = graph.getNodes().get(0);
         Node goal = graph.getNodes().get(5);
 
-        //graph.BFSShortestPath(start, goal);
+        graph.BFSShortestPath(start, goal);
+        Graph graph2 = Functions.createWeightedGraph(6,5);
+        graph2.printGraph(true);
+        Node start2 = graph2.getNodes().get(0);
+        Node goal2 = graph2.getNodes().get(5);
 
-        Node start2 = graph.getNodes().get(0);
-        Node goal2 = graph.getNodes().get(5);
-
-        //System.out.println("\n=== DIJKSTRA ===");
-        graph.dijkstraShortestPath(start2,goal2);
+        System.out.println("\n=== DIJKSTRA ===");
+        graph2.dijkstraShortestPath(start2,goal2);
     }
 }
